again trail/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: frontend
  template:
    metadata:
      labels: 
        app: frontend
    spec:
      containers:
        - name: cont1
          image: narasimhasai95/frontreact
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontendservice2
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontendservice
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30080
