again trail/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: express.devopsinaction.in
      http:
        paths:
          - path: /goals
            pathType: Prefix
            backend:
              service:
                name: backendservice
                port:
                  number: 345
