again trail/ingress2.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: todo.devopsinaction.in
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: frontendservice
                port:
                  number: 3000
